syntax = "proto3";

option go_package = "out/user_info";  //输出作为输出路径
option java_multiple_files = true;
option java_package = "com.qianxunke.ego.user.info";
option java_outer_classname = "UserInfo";
option objc_class_prefix = "UI";

import "google/api/annotations.proto";

package user_info;

service UserInfo {
    //用户登陆
    rpc DoneUserLogin (In_doneUserLogin) returns (Out_doneUserLogin) {
        option (google.api.http) = {
            post: "/v1/user/login"
            body: "*"
        };
    }
    //获取用户详细信息
    rpc GetUserInfo (In_getUserInfo) returns (Out_getUserInfo) {
        option (google.api.http) = {
            get: "/v1/user/{user_id}"
        };
    }
    //获取用户列表
    rpc GetUserInfoList (In_getUserInfoList) returns (Out_getUserInfoList) {
        option (google.api.http) = {
            get: "/v1/user/list"
        };
    }
    //修改用户信息
    rpc UpdateUserInfo (In_updateUserInfo) returns (Out_updateUserInfo) {
        option (google.api.http) = {
            post: "/v1/user/update"
            body: "*"
        };
    }
    //用户注册
    rpc DoneUserRegister (In_doneUserRegister) returns (Out_doneUserRegister) {
        option (google.api.http) = {
            post: "/v1/user/register"
            body: "*"
        };
    }
    //获取验证码
    rpc GetVerificationCode (In_getVerificationCode) returns (Out_getVerificationCode) {
        option (google.api.http) = {
            get: "/v1/user/code"
        };
    }
}

//用户信息  忽略某些数据sql:"-"
message User_inf {
    int64 user_id = 1;
    string nike_name = 2;
    string user_name = 3;
    string password = 4; //登陆密码
    uint64 user_stats = 5; //登陆状态
    uint64 identity_card_type = 6;
    string identity_card_no = 7;
    string mobile_phone = 8;
    string user_email = 9;
    string gender = 10;
    uint64 user_point = 11;
    string register_time = 12;
    string birthday = 13;
    string modified_time = 14;

}


message In_doneUserLogin {
    string user_name = 1;
    string password = 2; //登陆密码
    string mobile_phone = 3;
    string verification_code = 4;
    uint64 login_type = 5; //登陆方式
}

message Out_doneUserLogin {
     Error Error = 1;
    string token = 2;
    User_inf user_inf = 3; //用户信息
}

message In_getUserInfo {
    string user_name = 1;
    string mobile_phone = 2;
    int64 user_id = 3;
}

message Out_getUserInfo {
    Error error = 1;
    User_inf user_inf = 2; //用户信息
    repeated string roles=3;
}

message In_getUserInfoList {
    int64 limit = 1;
    int64 pages = 2;
    string search_key = 3;
    string start_time = 4;
    string end_time = 5;
}

message Out_getUserInfoList {
    Error error = 1;
    int64 limit = 2;
    int64 pages = 3;
    int64 total = 4;
    repeated User_inf user_inf_list = 5;
}

message In_updateUserInfo {
    User_inf user_inf = 1;
}
message Out_updateUserInfo {
    Error Error = 1;
    User_inf user_inf = 2;
}

message In_doneUserRegister {
    User_inf userinf = 1; //用户基本信息
    string verification_code = 2; //验证
    string verification_phone = 3;
}

message Out_doneUserRegister {
    string Token = 1;
    Error Error = 2;
    User_inf user_inf = 3;
}

message In_getVerificationCode {
    string code = 1;
    string telephone = 2;
}

message Out_getVerificationCode {
    Error Error = 1;
}

message Error {
    int32 code = 1;
    string message = 2;
}



